--- a/ToolsWebApplication/ToolsWebApplication.csproj
+++ b/ToolsWebApplication/ToolsWebApplication.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="20170920.zip.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
   </ItemGroup>
 
